# MiraGram

./: .gitignore  pyproject.toml  requirements.txt
code/src/: main.py
code/src/base/: base.py  config.py  init.py
code/src/call/: call_base.py
miragram/log/: logger.py
miragram/src/: main.py
miragram/src/base/: base.py  config.py
miragram/src/call/: call_base.py
miragram/src/prompt/: prompt_base.py  prompt_generator.py
miragram/src/prompt/models/code/: code_architect.py
miragram/tests/chats/: architect.py  parser_architect.py
miragram/tests/functions/: ask_gpt.py  code.py  parser.py
miragram/tests/models/: parser_models.py
